fix text to be readable

--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -6,6 +6,7 @@
 
 .first-button{
     background-color: black;
+    color: white;
 }
 
 .second-button{
